--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/laravel-ray": "^1.26"
+        "spatie/laravel-ray": "^1.26",
+        "spatie/phpunit-snapshot-assertions": "^5.1"
     },
     "autoload": {
         "psr-4": {
-            "schruptor\\FormComponents\\": "src/",
-            "schruptor\\FormComponents\\Database\\Factories\\": "database/factories/"
+            "schruptor\\FormComponents\\": "src/"
         }
     },
     "autoload-dev": {
